@@ -1,4 +1,4 @@
-# $NetBSD: xfree,v 1.3 2003/10/06 03:00:32 mycroft Exp $
+# $NetBSD: xfree,v 1.4 2003/10/13 15:55:11 veego Exp $
 #
 # The files listed below are the union of the sets of files installed by
 # the supported XFree distributions, minus the set of files representing
@@ -498,6 +498,7 @@ lib/libXfont.so
 lib/libXfont.so.1
 lib/libXfont.so.1.3
 lib/libXfont.so.1.4
+lib/libXfont.so.1.5
 lib/libXfont.dylib
 lib/libXfont.1.dylib
 lib/libXfont.1.3.dylib
@@ -513,6 +514,7 @@ lib/libXft.so.1.0
 lib/libXft.so.1.1
 lib/libXft.so.2
 lib/libXft.so.2.0
+lib/libXft.so.2.1
 lib/libXft.dylib
 lib/libXft.1.dylib
 lib/libXft.1.0.dylib
@@ -626,6 +628,8 @@ lib/libexpat.a
 lib/libexpat.so
 lib/libexpat.so.1
 lib/libexpat.so.1.0
+lib/libexpat.so.4
+lib/libexpat.so.4.0
 lib/libexpat.dylib
 lib/libexpat.1.dylib
 lib/libexpat.1.0.dylib
